--- a/paper/mybib.bib
+++ b/paper/mybib.bib
@@ -1,4 +1,4 @@
-@misc{james,
+@book{james,
 	title={Computer networking a top-down approach featuring the internet},
 	author={James, F KUROSE and Keith, W ROSS},
 	year={2004},
@@ -63,3 +63,9 @@
 	publisher={IEEE}
 }
 
+@book{forouzan,
+	title={Data Communications \& Networking (sie)},
+	author={Forouzan, A Behrouz},
+	year={2006},
+	publisher={Tata McGraw-Hill Education}
+}
