--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -43,6 +43,7 @@
 
 \usepackage{color}
 \usepackage{listings}
+\usepackage{fancyvrb}
 
 
 
@@ -617,7 +618,7 @@ The pseudo code of gossip algorithm is given in figure~\ref{fig:pseudo}.
 
 \begin{figure}
  \centering
- \begin{verbatim}
+ \begin{Verbatim}[fontsize=\small]
 switch(state):
   case running:
     if message is not null:
@@ -646,7 +647,7 @@ switch(state):
         send data to the source node
       if packet is data:
         send ACK to the source node
-\end{verbatim}
+\end{Verbatim}
  \caption{The pseudo code of the gossip algorithm.}
  \label{fig:pseudo}
 \end{figure}
@@ -747,15 +748,6 @@ Due to time limitations we could not address the huge spectrum of possible analy
 % starts a section numbered zero.)
 %
 
-
-\appendices
-\section{Proof of the First Zonklar Equation}
-Appendix one text goes here.
-
-% you can choose not to have a title for an appendix
-% if you want by leaving the argument blank
-\section{}
-Appendix two text goes here.
 
 
 % use section* for acknowledgment
