--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -373,7 +373,7 @@
 % As a general rule, do not put math, special symbols or citations
 % in the abstract or keywords.
 \begin{abstract}
-In real world, the actual network infrastructure can be dynamic. With the help of network virtualization, we are able to performan remote sensing task regardless of physicial network changes. For a given network, if we tried to perform any task, the first crucial step is be able to spread the task requirement in the network in an effecient manner. In short, task message need to be broadcasted quickly. In this paper, we use ns-3 to implement gossip protocol.  
+In real world, the actual network infrastructure can be dynamic. With the help of network virtualization, we are able to perform remote sensing task regardless of physical network changes. For a given network, if we tried to perform any task, the first crucial step is to spread the task requirement in the network in an efficient manner. In short, task message need to be broadcasted quickly. In this paper, we use ns-3 to implement gossip protocol.  
 \end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
@@ -539,22 +539,22 @@ Those dynamic networks require a robust way to spread information across the who
 %Our project goal is to evaluate the performance of a virtual network protocol consisting of IoT devices in ns-3. The major step here is that we will first simulate a wired mesh network with a given topology file. Then we will replace the wired Ethernet mesh network with wireless mesh network. Based on the new wireless mesh network, we will plug in models representing IoT device’s characters and implementing protocol to evaluate its performance.
 
 %REPLACED BY:
-The goal of our project is to add the gossip protocol to the simulation tool, ns3 and construct the customize packet to evaluate the performance of the gossip protocol in a mesh network of peer-to-peer connected IoT devices in the network simulator ns-3. There are \textcolor{red}{\textbf{three?}} essencial aspects to evaluate the performance measurements.
+The goal of our project is to add the gossip protocol to the simulation tool, ns3 and construct the customize packet to evaluate the performance of the gossip protocol in a mesh network of peer-to-peer connected IoT devices in the network simulator ns-3. There are \textcolor{red}{\textbf{three?}} essential aspects to evaluate the performance measurements.
 \begin{itemize}
  \item \textcolor{red}{ Average number of messages sent per node}
  \item Maximum amount of hops needed to spread the message
  \item Maximum amount of time needed until the message is spread
 \end{itemize}
 
-The average number of messages sent per node could help engineer to underestand the heavy load of the nodes. If the number of message sent per node is too large, then we may need to consider some mechanism to reduce the load in each node or use other protocol.
+The average number of messages sent per node could help engineer to understand the heavy load of the nodes. If the number of message sent per node is too large, then we may need to consider some mechanism to reduce the load in each node or use other protocol.
 
-The maximum amount of hops needed to spread the message is to evaluate whether the time to spreard one message to the whole network will affect by the number of hops. This could inspire engineers to deside whether they want to reduce the total number of hops of the network.
+The maximum amount of hops needed to spread the message is to evaluate whether the time to spread one message to the whole network will affect by the number of hops. This could inspire engineers to decide whether they want to reduce the total number of hops of the network.
 
-The maximum amount of time needed until the message the spread could use to evalute the time complexity of gossip protocol and it could also see whether the inscrease of the number of hops and average number of meesage sent per node could affect the time to spread the message to network.
+The maximum amount of time needed until the message the spread could use to evaluate the time complexity of gossip protocol and it could also see whether the increase of the number of hops and average number of message sent per node could affect the time to spread the message to network.
 
 We plan to run the simulation for different numbers of nodes to verify that the time complexity of the gossip protocol is $O(\log N)$, where $N$ is the number of nodes.
 
-Since the gossip protocol was not embedded in the NS3 simulatior, we need to implement the gossip protocol in NS3 and construct the structure of customized gossip packet in NS3.
+Since the gossip protocol was not embedded in the NS3 simulator, we need to implement the gossip protocol in NS3 and construct the structure of customized gossip packet in NS3.
 
 %\subsection{Network scenario 1: Wired Network}
 %In this network scenario, we will try to simulate a wired mesh network with a given topology file. But first, a simple peer-to-peer network formed of nodes connected by a 100~Mbit/s Ethernet connections is looked onto. And then we will elaborate this peer-to-peer network to a wired mesh network with a certain topology. That topology is defined by a file that contains the information about the nodes and edges of the network.
@@ -567,7 +567,7 @@ In this section, we introduce the topic of Virtual Networks formed using a subse
 \subsection{Virtual Networks}
 The following sections will present an overview over Virtual Sensor Networks, as well as network virtualization using the existing internet.
 \subsubsection{Virtual Sensor Networks}
-The ongoing technological progress further and further improves the computation, connectivity and sensing capabilities of various devices, sometimes mobile ones. \cite{Jayasumana} This enables a huge variety of opportunities in sensor networks. For example, devices in a sensor network could be assigned tasks based on their constraints in computation, power usage or networking potential. In contrast to dedicated sensor networks, where the participating nodes serve a single application, Virtual Sensor Networks (VSN) take advantage of the node’s technological progress. When a VSN is formed on top of a Wireless Sensor Network, only a subset of all available nodes is part in the VSN. Furthermore, several VSNs can exist simultaneously in on Wireless Sensor Network. \cite{Jayasumana} That is, one subset of the nodes forms a VSN and relies on the remaining nodes to communicate between its nodes. In some cases, physical nodes of one VSN even could be completely cut off from communication due to their spatial distribution and must rely on the other nodes. Usually the different VSNs pursue completely unrelated sensing tasks and the nodes in each VSN behave like they are on their independent Sensor Network. Figure~\ref{vsnfig} based on \cite{Jayasumana} depicts a visualization of twoVSNs formed on top of an Wireless Sensor Network. This logical separation helps to simplify the implementation of applications significantly. \cite{Jayasumana} Further advantages of VSNs are enhanced performance and better scalability.
+The ongoing technological progress further and further improves the computation, connectivity and sensing capabilities of various devices, sometimes mobile ones. \cite{Jayasumana} This enables a huge variety of opportunities in sensor networks. For example, devices in a sensor network could be assigned tasks based on their constraints in computation, power usage or networking potential. In contrast to dedicated sensor networks, where the participating nodes serve a single application, Virtual Sensor Networks (VSN) take advantage of the node’s technological progress. When a VSN is formed on top of a Wireless Sensor Network, only a subset of all available nodes is part in the VSN. Furthermore, several VSNs can exist simultaneously in on Wireless Sensor Network. \cite{Jayasumana} That is, one subset of the nodes forms a VSN and relies on the remaining nodes to communicate between its nodes. In some cases, physical nodes of one VSN even could be completely cut off from communication due to their spatial distribution and must rely on the other nodes. Usually the different VSNs pursue completely unrelated sensing tasks and the nodes in each VSN behave like they are on their independent Sensor Network. Figure~\ref{vsnfig} based on \cite{Jayasumana} depicts a visualization of two VSNs formed on top of an Wireless Sensor Network. This logical separation helps to simplify the implementation of applications significantly. \cite{Jayasumana} Further advantages of VSNs are enhanced performance and better scalability.
 
 The development of algorithms and protocols to support the grouping of VSNs on top of Sensor Networks, is still an ongoing research topic. Those need to consider how the available time and frequencies should be fairly distributed for intra network communication. Moreover, it should be possible for nodes to change their membership in VSNs.
 
@@ -580,7 +580,7 @@ The development of algorithms and protocols to support the grouping of VSNs on t
 
 
 \subsubsection{Virtual Networks on Top of the Internet}
-It is important to realize that the Internet, due to so many different participants with sometimes opposing interests, is hard to modify and only possible small and slow steps, if at all. Therefore, Virtual Networks are often the only way to realize innovation. To implement a Virtual Network using the existing Internet, several things need to be considered. First, the characteristics of the networking technology determine the attributes of the Virtual Network. For instance, a wired network yields a more scalable and bandwidth flexible Virtual Network than a wireless network would do. \cite{Chowdhury} Second, the layer of virtualization (referring to the OSI layer model) impacts the flexibility of the Virtual Network. That is, the lower the layer of virtualization, the more flexibility will be possible. Specifically, so called overlay networks, mostly realized in the application layer, are limited in their ability to support fundamentally different architectures. \cite{Chowdhury} Moreover, virtualization on top of IP is fixed to the network layer protocol and can not deploy IP independent mechanisms.  \cite{Chowdhury} Lastly, an important consideration in the non comprehensive list is also about security and privacy in virtual networks. Thus, attack vectors such as denial-of-service or distributed denial-of-service against the underlying physical network will have impact on all simultaneously virtualized networks.
+It is important to realize that the Internet, due to so many different participants with sometimes opposing interests, is hard to modify and only possible small and slow steps, if at all. Therefore, Virtual Networks are often the only way to realize innovation. To implement a Virtual Network using the existing Internet, several things need to be considered. First, the characteristics of the networking technology determine the attributes of the Virtual Network. For instance, a wired network yields a more scalable and bandwidth flexible Virtual Network than a wireless network would do. \cite{Chowdhury} Second, the layer of virtualization (referring to the OSI layer model) impacts the flexibility of the Virtual Network. That is, the lower the layer of virtualization, the more flexibility will be possible. Specifically, so-called overlay networks, mostly realized in the application layer, are limited in their ability to support fundamentally different architectures. \cite{Chowdhury} Moreover, virtualization on top of IP is fixed to the network layer protocol and cannot deploy IP independent mechanisms.  \cite{Chowdhury} Lastly, an important consideration in the non-comprehensive list is also about security and privacy in virtual networks. Thus, attack vectors such as denial-of-service or distributed denial-of-service against the underlying physical network will have impact on all simultaneously virtualized networks.
 \subsubsection{Virtualization Algorithm}
 Though, it is possible to form a VSN of mobile IoT devices by having access to all relevant data such as availability, sensor capabilities or sensor mobility, a more efficient solution is to assume the managing cloud agent does not have full knowledge of every sensors’ properties. \cite{Sherif} The cloud agent even may not be connected to all nodes but only to a subgroup of them. The presented algorithm also takes into account mobility of the devices which sometimes leads to nodes being unavailable for some time. \cite{Sherif}
 This virtualization algorithm will search and select appropriate sensors from the whole network to form the virtual network which then executes the sensing task.
@@ -599,7 +599,7 @@ To solve the goals outlined in section~\ref{sec:problem} and implement them in n
 \end{itemize}
 
 \subsection{ICMP extension}
-\textcolor{red}{TODO: Explain changes made to code and summarize bulletpoints from presentation}
+\textcolor{red}{TODO: Explain changes made to code and summarize bullet points from presentation}
 
 ICMP stands for Internet Control Message Protocol. The most common use of ICMP is for error reporting~\cite{james}. ICMP message contains two parts: 8-byte header and data section. The first 4 btyes of the header have fixed format. However, the last 4 bytes various depend on the type or code of the ICMP packet~\cite{forouzan}. The first and second byte of the header is the type field and code field respectively. And the third and fourth byte is checksum field.
  
@@ -612,7 +612,7 @@ ICMP stands for Internet Control Message Protocol. The most common use of ICMP i
 \subsection{Gossip protocol }
 \textcolor{red}{TODO: Make sure gossip protocol is introduced and pseudo code is given and explained}
 
-Gossip protocol is a computer comunication protocol which inspired by the social activity -- gossip. This protocol accomplishes to synchronize a message in a system which does not need realtime synchronization. It provides $O(\log n)$ time to synchronize the message to the network, where $n$ means the number of nodes in the network. There are three packet types for the message protocol: Data packet, ACK packet and request packet. The data packet contains the message from a certain source node who wants to spread this message to the whole network. The ACK packet is a packet to notice the node that the destination alread contains the mesaage. The request packet is the packet which request the message from destination node. There are two states for each node, running and stop.
+Gossip protocol is a computer communication protocol which inspired by the social activity -- gossip. This protocol accomplishes to synchronize a message in a system that does not need real-time synchronization. It provides $O(\log n)$ time to synchronize the message to the network, where $n$ means the number of nodes in the network. There are three packet types for the message protocol: Data packet, ACK packet and request packet. The data packet contains the message from a certain source node that wants to spread this message to the whole network. The ACK packet is a packet to notice the node that the destination already contains the message. The request packet is the packet that request the message from destination node. There are two states for each node, running and stop.
 
 The pseudo code of gossip algorithm is given in figure~\ref{fig:pseudo}.
 
@@ -652,9 +652,9 @@ switch(state):
  \label{fig:pseudo}
 \end{figure}
 
-The explaination of the pseudo code: 
+The explanation of the pseudo code: 
 
-All the node in network have same behaviour and they are all independent. When we want to spread a message x to the whole network, we assign the x to message and run this algorithm. node 1 start with running state, and node 1 has a message x, so it will find a random neighbor every five milliseconds and send a data packet which contain message x to its random neighbor. If node 1 receive a ACK packet it will go to stop state, otherwise it will keep doing these steps. Other nodes which do not have the message x will wait for packet, if a node 1 send a data packet to the node 2 which do not have message x, node 2 will update the message in node 2 and not return anything to node 1. if node 2 do not have message 2, it will send a request packet to a random neighbor every 5 second. If node 2 receive a data packet after sedning the request packet, it will update its message to x. The nodes in stop state would always waiting for other node send message to it and it will send data packet or ACK packet back depends on what packet it receive.
+All the node in network have same behavior and they are all independent. When we want to spread a message x to the whole network, we assign the x to message and run this algorithm. Node 1 start with running state, and node 1 has a message x, so it will find a random neighbor every five milliseconds and send a data packet which contain message x to its random neighbor. If node 1 receive a ACK packet it will go to stop state, otherwise it will keep doing these steps. Other nodes which do not have the message x will wait for packet, if a node 1 send a data packet to the node 2 which do not have message x, node 2 will update the message in node 2 and not return anything to node 1. If node 2 do not have message 2, it will send a request packet to a random neighbor every 5 second. If node 2 receives a data packet after sending the request packet, it will update its message to x. The nodes in stop state would always waiting for other node send message to it and it will send data packet or ACK packet back depends on what packet it receive.
 
 \subsection{Gathering results}
 
@@ -691,7 +691,7 @@ Finally, we post-process the collected data to produce meaningful plots.
 
 First, we will have a look at the average number of icmp messages each node sent, depicted in fig.~\ref{fig:avgmsg}. It is important to note that the the collected average number for one topology file was again averaged over all reported values produced by topology files with the same number of nodes. Thus, the error bar is an indicator how consistent the average number is. It can be deduced from fig.~\ref{fig:avgmsg} that this value is a constant roughly equal to 3.3. Only when a very litte number of nodes is observed, the mean and variance of the average amount of sent messages increases. \textcolor{red}{Is this a fluctuation or can this be ``normalized'' by running the simulation for each topology file a lot more often?}
 
-Second, the highest number of hops a message experiences is analysed. Figure~\ref{fig:maxhops} shows that with a growing number of nodes, also the maximum of the number of hops grows. Nonetheless, the overall impression, is that the number of hops is generally speaking, more or less constant and mostly is found to range from 15 to 20. \textcolor{red}{Boxplot more appropriate?}
+Second, the highest number of hops a message experiences is analyzed. Figure~\ref{fig:maxhops} shows that with a growing number of nodes, also the maximum of the number of hops grows. Nonetheless, the overall impression is that the number of hops is generally speaking, more or less constant and mostly is found to range from 15 to 20. \textcolor{red}{Boxplot more appropriate?}
 
 Lastly, figure~\ref{fig:maxtime} illustrates the time needed to spread the message across the whole network. Again, the mean is found to be more or less constant and slightly less than 15~s. Due to the huge difference in the gossip-interval-time (5~ms) and solicit-interval-time (5~s), only the influence of the solicit-interval can be deduced from the results. One can see, that the time needed to spread the message is fluctuating due to the random nature of the gossip protocol, especially for the case of a number of nodes of 100, where the standard error is the largest.
 
@@ -719,9 +719,9 @@ Lastly, figure~\ref{fig:maxtime} illustrates the time needed to spread the messa
 \textcolor{red}{Maybe write about further work... What can be improved or looked onto...}
 
 \section{Conclusion}
-We have introduced the topics of Internet of things and sensor networks. The opportunities resulting by virtualization of those sensor networks have been elaborated. A distributed algorithm to spread data accross a mesh-network has been implemented. We proposed several performance measures to evaluate this algorithm.
+We have introduced the topics of Internet of things and sensor networks. The opportunities resulting by virtualization of those sensor networks have been elaborated. A distributed algorithm to spread data across a mesh-network has been implemented. We proposed several performance measures to evaluate this algorithm.
 
-Our results show the number of messages a node expects to send is not a function of the total number of nodes in the network. Further, we see that the maximum number of hops is slightly increasing for an increasing number of nodes. And lastly, our results imply that the time until all nodes have the data, is mostly only dependend on how the solicit-interval is chosen.
+Our results show the number of messages a node expects to send is not a function of the total number of nodes in the network. Further, we see that the maximum number of hops is slightly increasing for an increasing number of nodes. And lastly, our results imply that the time until all nodes have the data, is mostly only depended on how the solicit-interval is chosen.
 
 Unfortunately, we could not verify that the time complexity of the algorithm is $O(\log n)$ as outlined in \cite{gossip}. Possible causes to consider are discussed in the next section.
 
