fix the table format

--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -375,17 +375,17 @@
 \begin{table}[h]
 \begin{tabular}{|l|l|l|l|}
 \hline
-Type                        & Code & Status     & Description                 \\ \hline
-0– Echo Reply               & 0    &            & Echo reply (used to ping)   \\ \hline
-1and 2                      &      &            & Reserved                    \\ \hline
-3 – Destination Unreachable & 0-15 &            &                             \\ \hline
-4 – Source Quench           & 0    & deprecated & Source quench               \\ \hline
-5 – Redirect Message        & 0-3  &            & Redirect Datagram           \\ \hline
-6                           &      & deprecated & Alternate Host Address      \\ \hline
-7                           &      &            & Reserved                    \\ \hline
-8 – Echo Request            & 0    &            & Echo request (used to ping) \\ \hline
-9 – Router Advertisement    & 0    &            & Router Advertisement        \\ \hline
-10 – Router Solicitation    & 0    &            & Router discovery            \\ \hline
+Type                        & Code & Status     & Description                                                            \\ \hline
+0– Echo Reply               & 0    &            & \begin{tabular}[c]{@{}l@{}}Echo reply (\\ used to ping)\end{tabular}   \\ \hline
+1and 2                      &      &            & Reserved                                                               \\ \hline
+3 – Destination Unreachable & 0-15 &            &                                                                        \\ \hline
+4 – Source Quench           & 0    & deprecated & Source quench                                                          \\ \hline
+5 – Redirect Message        & 0-3  &            & Redirect Datagram                                                      \\ \hline
+6                           &      & deprecated & \begin{tabular}[c]{@{}l@{}}Alternate Host \\ Address\end{tabular}      \\ \hline
+7                           &      &            & Reserved                                                               \\ \hline
+8 – Echo Request            &      &            & \begin{tabular}[c]{@{}l@{}}Echo request (\\ used to ping)\end{tabular} \\ \hline
+9 – Router Advertisement    & 0    &            & \begin{tabular}[c]{@{}l@{}}Router\\  Advertisement\end{tabular}        \\ \hline
+10 – Router Solicitation    & 0    &            & Router discovery                                                       \\ \hline
 \end{tabular}
 \end{table}
 
