Add figure (density)

--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -773,6 +773,13 @@ Lastly, figure~\ref{fig:maxtime} illustrates the time needed to spread the messa
  \label{fig:maxtime}
 \end{figure}
 
+\begin{figure}
+ \centering
+% \includegraphics[width=2.5in]{figs/density}
+ \caption{The density of the nodes for each batch of topology files.}
+ \label{fig:maxtime}
+\end{figure}
+
 \textcolor{red}{Maybe write about further work... What can be improved or looked onto...}
 
 \section{Conclusion}
